[package]
name = "todo-cli-app"
version = "0.2.0"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md",
	"LICENCE"
]
homepage = "https://github.com/MikeTeddyOmondi/todo-cli-app"
description = "Simple command line utility application for managing your tasks"
repository = "https://github.com/MikeTeddyOmondi/todo-cli-app"
keywords = [
	"cli",
	"task_application",
	"todo_application"
]
categories = ["command-line-interface"]
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
